save and sumbit progress