@@ -17,16 +17,50 @@ public class MatchingService {
             System.out.println("No mentors available for matching.");
             return null;
         }
-        Mentor mentor = mentors.getFirst(); // Simple matching: first mentor
-        student.setAssignedMentor(mentor);
-        mentor.addStudent(student);
+
+        // Find mentor with the fewest students or use first if no preference
+        Mentor selectedMentor = mentors.get(0);
+        int minStudents = selectedMentor.getAssignedStudents().size();
+        for (Mentor mentor : mentors) {
+            int studentCount = mentor.getAssignedStudents().size();
+            if (studentCount < minStudents) {
+                minStudents = studentCount;
+                selectedMentor = mentor;
+            }
+        }
+        student.setAssignedMentor(selectedMentor);
+        selectedMentor.addStudent(student);
         String sql = "UPDATE students SET mentor_id = ? WHERE user_id = ?";
         try (PreparedStatement stmt = database.getConnection().prepareStatement(sql)) {
-            stmt.setInt(1, mentor.getUserId());
+            stmt.setInt(1, selectedMentor.getUserId());
             stmt.setInt(2, student.getUserId());
             stmt.executeUpdate();
         }
-        // Reload mentor to ensure assignedStudents is up-to-date (optional but recommended)
-        return database.getMentor(mentor.getUserId(), true); // Load related students
+        // Reload mentor to ensure consistency
+        return database.getMentor(selectedMentor.getUserId(), true);
+    }
+
+    // Assign unassigned students to a mentor
+    public void assignUnassignedStudents(Mentor mentor) throws SQLException {
+        String sql = "SELECT user_id FROM students WHERE mentor_id IS NULL";
+        try (PreparedStatement stmt = database.getConnection().prepareStatement(sql);
+             ResultSet rs = stmt.executeQuery()) {
+            while (rs.next()) {
+                int studentId = rs.getInt("user_id");
+                Student student = database.getStudent(studentId, true);
+                if (student != null && student.getAssignedMentor() == null) {
+                    student.setAssignedMentor(mentor);
+                    mentor.addStudent(student);
+                    String updateSql = "UPDATE students SET mentor_id = ? WHERE user_id = ?";
+                    try (PreparedStatement updateStmt = database.getConnection().prepareStatement(updateSql)) {
+                        updateStmt.setInt(1, mentor.getUserId());
+                        updateStmt.setInt(2, studentId);
+                        updateStmt.executeUpdate();
+                    }
+                }
+            }
+            // Reload mentor to reflect new assignments
+            database.getMentor(mentor.getUserId(), true);
+        }
     }
 }
